<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>de.robingrether.idisguise</groupId>
  <artifactId>idisguise-core</artifactId>
  <version>5.8.1-SNAPSHOT</version>
  <name>iDisguise</name>
  
  <properties>
  	<maven.build.timestamp.format>yyyy_MM_dd-HH_mm_ss</maven.build.timestamp.format>
  </properties>
  
  <repositories>
  	<repository>
  		<id>spigot-repo</id>
  		<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
  	</repository>
  	<repository>
  		<id>bstats-repo</id>
  		<url>http://repo.bstats.org/content/repositories/releases/</url>
  	</repository>
  	<repository>
  		<id>robingrether-repo</id>
  		<url>http://repo.robingrether.de/</url>
  	</repository>
  	<repository>
    	<id>nametagedit-repo</id>
    	<url>http://ci.nametagedit.com/plugin/repository/everything/</url>
	</repository>
  </repositories>
  
  <dependencies>
  	<dependency>
  		<groupId>org.bukkit</groupId>
  		<artifactId>bukkit</artifactId>
  		<version>1.13-R0.1-SNAPSHOT</version>
  		<scope>provided</scope>
  	</dependency>
  	<dependency>
  		<groupId>org.bstats</groupId>
  		<artifactId>bstats-bukkit</artifactId>
  		<version>1.1</version>
  		<scope>compile</scope>
  	</dependency>
  	<dependency>
  		<groupId>de.robingrether.util</groupId>
  		<artifactId>utility</artifactId>
  		<version>1.0.2</version>
  		<scope>compile</scope>
  	</dependency>
  	<dependency>
  		<groupId>io.netty</groupId>
  		<artifactId>netty-all</artifactId>
  		<version>4.1.24.Final</version>
  		<scope>provided</scope>
  	</dependency>
  	<dependency>
    	<groupId>com.nametagedit</groupId>
    	<artifactId>nametagedit</artifactId>
    	<version>4.1.0</version>
    	<scope>provided</scope>
	</dependency>
	<dependency>
		<groupId>com.gmail.filoghost</groupId>
		<artifactId>coloredtags</artifactId>
		<version>2.1.3</version>
		<scope>provided</scope>
	</dependency>
  </dependencies>
  
  <build>
  	<resources>
  		<resource>
  			<directory>src/main/resources</directory>
  			<filtering>true</filtering>
  		</resource>
  	</resources>
  	<plugins>
  		<plugin>
        	<artifactId>maven-compiler-plugin</artifactId>
        	<version>3.1</version>
        	<configuration>
        		<source>1.8</source>
        		<target>1.8</target>
        	</configuration>
        </plugin>
  		<plugin>
  			<groupId>org.apache.maven.plugins</groupId>
  			<artifactId>maven-shade-plugin</artifactId>
  			<version>2.3</version>
  			<configuration>
  				<artifactSet>
  					<includes>
  						<include>org.bstats:*</include>
  					</includes>
  				</artifactSet>
  				<relocations>
  					<relocation>
  						<pattern>org.bstats</pattern>
  						<shadedPattern>de.robingrether.idisguise.io.bstats</shadedPattern>
  					</relocation>
  				</relocations>
  			</configuration>
  			<executions>
  				<execution>
  					<phase>package</phase>
  					<goals>
  						<goal>shade</goal>
  					</goals>
  				</execution>
  			</executions>
  		</plugin>
  	</plugins>
  	<extensions>
  		<extension>
  			<groupId>org.apache.maven.wagon</groupId>
  			<artifactId>wagon-ssh</artifactId>
  			<version>3.1.0</version>
  		</extension>
  	</extensions>
  </build>
  
  <distributionManagement>
  	<repository>
  		<id>robingrether-repository-ftp</id>
  		<url>sftp://ssh.strato.de/</url>
  	</repository>
  </distributionManagement>
</project>